--- a/doc/org-manual.org
+++ b/doc/org-manual.org
@@ -15572,11 +15572,10 @@ for the Portuguese text and ~FreeSerif~ for Greek.
 
 When composing Chinese, Japanese or Korean documents, localization is
 provided by ~babel~, while fonts are configured using the ~xeCJK~
-package, which provides the ~\setCKJmainfont{}~, ~\setCJKsansfont{}~
-and ~\setCJKmonofont{}~ commands.  Use ~org-latex-fontspec-config~ to
-define the ~CJKmain~, ~CJKsans~ and ~CJK mono~ fonts supporting the
-Chinese, Japanese or Korean scripts you need for your documents. *Note*
-that this solution will /only/ work with ~xelatex~.
+package.  *Note* that this solution will /only/ work with ~xelatex~.
+
+Setting ~org-latex-fontspec-config~ to ~nil~ will produce a working
+document with the default fonts provided by the ~xeCJK~ package.
 
 The following document header
 #+BEGIN_SRC org
@@ -15586,9 +15585,7 @@ The following document header
 #+END_SRC
 
 #+texinfo: @noindent
-will allow you to typeset a Chinese document. Setting
-~org-latex-fontspec-config~ to ~nil~ will produce a working document
-with the default fonts provided by the ~xeCJK~ package.
+will allow you to typeset a Chinese document.
 
 Similarly, you can typeset Japanese documents. The following header
 
@@ -15602,9 +15599,14 @@ Similarly, you can typeset Japanese documents. The following header
 will allow you to typeset a Japanese document, using the
 =HaranoAjiMincho= and =HaranoAjiGothic= fonts.
 
-You can further adapt the font configuration to your needs. For
-example, the following font configuration will produce a Chinese
-document typeset with the =Noto= font family:
+The appearance of the PDF output can be further customised if needed.
+The ~xeCJK~ package provides the ~\setCKJmainfont{}~,
+~\setCJKsansfont{}~ and ~\setCJKmonofont{}~ commands to select specific
+fonts.  Use ~org-latex-fontspec-config~ to define the ~CJKmain~,
+~CJKsans~ and ~CJKmono~ fonts supporting the Chinese, Japanese or
+Korean scripts to match your needs.  For example, the following font
+configuration will produce a Chinese document typeset with the =Noto=
+font family:
 
 #+BEGIN_SRC elisp
 ((org-mode .
