--- a/doc/org-manual.org
+++ b/doc/org-manual.org
@@ -15151,9 +15151,12 @@ package manual]] Part II.  This variable can be set in your Emacs
 initialization code, in the file local variables or in the directory
 local variable file ~.dir-locals.el~[fn:54].
 
-~org-latex-fontspec-config~ maps the font name used in the
-~\set...font{}~ commands defined by the ~fontspec~ package to the
-font name used in the PDF and optional font features.
+~org-latex-fontspec-config~ maps the font family name used by LaTeX to
+the font used in the PDF output and optional font features. LaTeX
+knows four font families, namely: =main= as the default (Serif) font,
+=sans= for text typeset using Sans Serif fonts, =mono= for monospaced
+text (for example, listings) and =math= to typeset mathematical
+expressions.
 
 For example, if you want to map the ~math~ font to the system font
 ~TeX Gyre Termes Math~, you should use the *mandatory* property
@@ -15220,8 +15223,8 @@ scaled, you could specify it as:
 #+END_SRC
 #+texinfo: @noindent
 When you have more than one feature to add, you can also provide them
-as a comma-separated list. The following code also would also define
-the ~mono~ font as blue and scaled:
+as a comma-separated list in a string. The following code also would
+also define the ~mono~ font as blue and scaled:
 
 #+BEGIN_SRC emacs-lisp
 ("mono" :font "TeX Gyre Cursor"
@@ -15235,12 +15238,13 @@ you can also declare fallback fonts for specific scripts that are not
 included in the fonts used for your document.
 
 When this is the case, the LaTeX process will complain and Emacs will
-warn you. Using the list of scripts detected in the buffer, which it
-always generates during the export process in the *~*Messages*~*
-buffer, you can declare the fallback fonts for missing scripts, using
-~:fallback~ property for this purpose.  It links to an associative
-list that maps the script names as detected by Emacs with their
-fallback configuration.
+warn you. When exporting to LaTeX, the export process will always print
+a list of scripts in the *~*Messages*~* buffer.
+
+You can declare the fallback fonts for missing scripts based on this
+list and using ~:fallback~ property for this purpose.  It links to an
+associative list that maps the script names as detected by Emacs with
+their fallback configuration.
 
 For example, assume your ~init.el~ configures the ~main~ font in
 ~org-latex-fontspec-config~ as:
@@ -15290,8 +15294,7 @@ The format for the specification is
 2. ~("<script>" . "<font name>:<extra options>")~ to activate a font
    with a set of options for a specific script
 
-You may use any font name used in the ~\set..font{}~ command by the
-~fontspec~ package.
+You may use any font family defined in ~org-latex-fontspec-config~.
 
 #+vindex: org-latex-fontspec-default-features
 Additionally, you can define common features for all fonts using the
@@ -24331,7 +24334,8 @@ to learn to define and use directory local variables.
 
 [fn:55] Any font in ~org-latex-fontspec-config~ which includes a
 fallback for the =emoji= character set will produce equivalent code
-inside the =\directlua{}= code block.
+inside the =\directlua{}= code block using the
+[[https://github.com/latex3/luaotfload][luaotfload]] module.
 
 [fn:56] The language name can be the language as written out in the
 font declaration or the language identifier used in
